--- a/public/css/philippe.css
+++ b/public/css/philippe.css
@@ -55,6 +55,10 @@ html {
   text-align: left;
 }
 
+.words li:hover {
+  cursor: pointer;
+}
+
 .touch .words li {
   height: 2.6em;
   line-height: 2.6em;
