Change body background color

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
 }
 
 html {
-  background: url('../img/pattern.png') #f39c12;
+  background: url('../img/pattern.png') #EEECE5;
 }
 
 .page-content {
