--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,3 +128,14 @@ html {
     width: 370px;
   }
 }
+
+.social-network
+{
+  width: 180px;
+  margin: 0 auto;
+}
+
+.fb-share-button
+{
+  padding-right: 10px;
+}
